--- a/clickmechanic/views/emails.html
+++ b/clickmechanic/views/emails.html
@@ -1,5 +1,6 @@
 @@include('_header.html')
 <body class="page-emails">
+<section>
 	<table class="email">
 		<!-- Summary !-->
 		<tr>
@@ -136,7 +137,12 @@
 					</tr>
 				</table>
 				<!-- Help !-->
-
+				
+				<table class="referral">
+					<tr>
+						<td>Refer a friend, get £10 off your next repair. <a href="#">Click here to find out more.</a></td>
+					</tr>
+				</table>
 				<!-- Footer !-->
 				<table>
 					<tr>
@@ -149,5 +155,64 @@
 			</td>
 		</tr>
 	</table>
+</section>
+
+<section>
+	<table class="email">
+		<!-- Summary !-->
+		<tr>
+			<td>
+				<table>
+					<tr class="text-center">
+						<td><div class="logo"></div></td>
+					</tr>
+					<tr>
+						<td>
+							<p>Hi Andy,</p>
+
+							<p>Your mechanic, John, is due to visit soon, but unfortunately we have been unable to pre-authorise your card with number ending 0136. We do this to ensure your card is valid, and there are enough funds to cover the price of £245.78 quoted in your booking. This money will only be collected once John indicates the work is complete.</p>
+
+							<p>John will not visit until this has been successful and we recommend that you undertake the following steps:</p>
+						</td>
+					</tr>
+				</table>
+				<table class="section">
+					<tr>
+						<td>
+							<ol>
+								<li>Check to see if there are enough funds in your bank account.</li>
+								<li>If there are not enough funds to cover the work please top up your bank account so the correct amount of funds are available.</li>
+								<li>If there are enough funds available upon checking, please contact your bank as to why the transaction was not authorised.</li>
+							</ol>
+							<p>Once you have done this please contact our team as soon as possible with an update so we can get your booking authorised in time. Just reply to this email, or phone us on 020 3322 9988.</p>
+						</td>
+					</tr>
+				</table>
+				<table class="section">
+					<tr>
+						<td class="section-header"><h3 class="h4">Checklist</h3></td>
+					</tr>
+					<tr>
+						<td>
+							<ul class="checklist">
+								<li>
+									<img src="../../images/icons/icon-tick.png">If there are not enough funds to cover the work please top up your bank account so the correct amount of funds are available.
+								</li>
+								<li>
+									<img src="../../images/icons/icon-tick.png">If there are not enough funds to cover the work please top up your bank account so the correct amount of funds are available.
+								</li>
+								<li>
+									<img src="../../images/icons/icon-tick.png">If there are not enough funds to cover the work please top up your bank account so the correct amount of funds are available.
+								</li>
+							</ul>
+							<p>Once you have done this please contact our team as soon as possible with an update so we can get your booking authorised in time. Just reply to this email, or phone us on 020 3322 9988.</p>
+						</td>
+					</tr>
+				</table>
+
+				</td>
+			</tr>
+		</table>
+
 
 
