--- a/sass/_default-theme.scss
+++ b/sass/_default-theme.scss
@@ -24,9 +24,10 @@ $colors: (
 		base: #CCCCCC,
 		dark: #343840,
 	), 
-	notifications: (
-		error: #EB5A5A,
-		info:	#FFF9D7,
+	info: (
+		light: #FFF9D7,
+		base: #ECDF9A,
+		dark: #8C7A1B,
 	),
 );
 
