--- a/sass/components/_inc/_buttons.sass
+++ b/sass/components/_inc/_buttons.sass
@@ -26,16 +26,16 @@
 
 	// Color Modifiers
 	&.primary 
-		background-color: palette(brand-primary)
+		background-color: colors(brand-primary)
 		color: white
 		&:hover
-			background-color: palette(brand-primary, dark)
+			background-color: colors(brand-primary, dark)
 
 	&.secondary
-		background-color: palette(brand-primary)
+		background-color: colors(brand-primary)
 		color: white
 		&:hover
-			background-color: palette(brand-primary, dark)
+			background-color: colors(brand-primary, dark)
 
 	
 	&.bordered
