--- a/sass/config/_inc/_sizing.scss
+++ b/sass/config/_inc/_sizing.scss
@@ -19,5 +19,5 @@ $sizes: (
 	double-half: 										rem($size-base * 1.5),
 	double: 													rem($size-base * 2),
 	triple: 													rem($size-base * 3),
-	quadruple-unit: 											rem($size-base * 4),
+	quadruple: 											rem($size-base * 4),
 );
