--- a/sass/components/_inc/_grid.sass
+++ b/sass/components/_inc/_grid.sass
@@ -29,71 +29,17 @@ section
 .container-fluid
 	@extend %container
 
+// Grid settings
+$column-numbers: 12
+$column-width: 100% / $column-numbers
 
-
-
-
-@for $i from 1 through $column-numbers
-	.flex-grid-#{$i}
-		+no-bullet
-		display: flex
-		flex-wrap: wrap
-		margin-left: -sizes(base)
-		margin-right: -sizes(base)
-	
-		> li
-			width: 100%
-			padding: 0 sizes(base)
-			margin-bottom: sizes(base)
-			
-			+respond(device-medium)
-				width: 100% / $i
-				// Removes bottom margin from last elements in the block.
-				&:nth-last-child(-n+#{$i})
-					margin-bottom: 0
-
-
-		&.gutter-double
-		margin-left: -sizes(double)
-		margin-right: -sizes(double)
-		> li
-			padding: 0 sizes(double)
-
-		&.gutter-triple
-		margin-left: -sizes(triple)
-		margin-right: -sizes(triple)
-
-		> li
-			padding: 0 sizes(triple)
-			margin-bottom: sizes(triple)
-
-// @NOTE this is a very silly hotfix to make all .flex-grid-* classes display: flex
-[class^="flex-grid"]
-	display: flex
-
-.align-right
-	margin-left: auto !important
-
-.align-left
-	margin-right: auto !important
-
-.flex
-	display: flex
-
-	&.column
-		flex-direction: column
-
-	&.row
-		flex-direction: row
-
-	&.center-vertically
-		align-items: center
-
-	&.center-horizontally
-		justify-content: center
-
-
-
+// Generate gutter widths
+@each $size, $var in $sizes
+	.gutter-#{$size}
+		margin-left: -($var) !important
+		margin-right: -($var) !important
+		> [class^="column"], > li
+			padding: 0 $var !important
 
 // Generates classes for columns 1 - 12.
 @for $i from 1 through $column-numbers
@@ -103,39 +49,37 @@ section
 		float: left
 		// +respond-to-size($tablet)
 		// 	width: 100%
+		// 	margin-bottom: $double-unit-layout
+
+@for $i from 1 through $column-numbers
+	.flex-grid-#{$i}
+		+nobullet
+		display: flex
+		flex-wrap: wrap
+		margin-left: -(sizes(base))
+		margin-right: -(sizes(base))
+		> li
+			width: 100% / $i
+			padding: 0 sizes(base)
+			margin-bottom: sizes(base)
+			&:nth-last-child(-n+#{$i})
+				margin-bottom: 0
 
 // Generates classes for column offsets.
 @for $i from 1 through $column-numbers
 	.offset-#{$i}
-		+respond(device-large)
-			margin-left: $i * $column-width
-
+		margin-left: $i * $column-width
 
 // Grid Container & Helper Classes
 // Start with a row container. Inside the roe container, use the columns. The module or component is then place dinside each column.
 .row, .flex-row
 	+clearfix
 	position: relative
-	margin-left: -sizes(base)
-	margin-right: -sizes(base)
+	margin-left: -(sizes(base))
+	margin-right: -(sizes(base))
+	> [class^="column"]
+		padding: 0 sizes(base)
 
-	&.no-gutter, &.full-bleed
-		margin-left: 0 !important
-		margin-right: 0 !important
-		> [class^="column"]
-			padding: 0 !important
-	
-	// Halfs the spacing between the columns
-	&.gutter-half
-		margin-left: -sizes(half)
-		margin-right: -sizes(half)
-		> [class^="column"]
-			padding: 0 sizes(half)
-	
-	&.gutter-double
-		margin-left: -sizes(double)
-		margin-right: -sizes(double)
-		> [class^="column"]
-			padding: 0 sizes(double)
+
 
 
