--- a/sass/mixins/_inc/_palette.scss
+++ b/sass/mixins/_inc/_palette.scss
@@ -1,4 +1,7 @@
-@function palette($palette, $tone: 'base') {
+
+
+
+@function colors($palette, $tone: 'base') {
 	@return map-get(map-get($colors, $palette), $tone);
 }
 
