--- a/sass/components/_inc/_normalise.sass
+++ b/sass/components/_inc/_normalise.sass
@@ -20,7 +20,7 @@ time, mark, audio, video
 	vertical-align: baseline
 
 html
-	font-size: sizes(base) // This is the only case where px unit is used
+	font-size: 14px // This is the only case where px unit is used
 	line-height: 1
 	color: colours(greyscale, dark)
 	min-height: 100%
