--- a/sass/components/_inc/_buttons.sass
+++ b/sass/components/_inc/_buttons.sass
@@ -62,6 +62,9 @@
 	&.white
 		background: white
 		// color: $color-primary
+		&.hollow
+			border: 2px solid white
+			background: transparent
 		&:hover
 			background: darken(white, 5%)
 
@@ -83,5 +86,3 @@
 		padding: 0 32px
 		height: 52px
 
-	&.rounded
-		+border-radius(20px)
