--- a/sass/components/_inc/_masthead.sass
+++ b/sass/components/_inc/_masthead.sass
@@ -1,11 +1,3 @@
-// <div class="masthead">
-//	<div class="container-wide">
-//  </div>
-//
-
-html
-	font-family: 'proxima nova'
-
 .masthead
 
 	width: 100%
@@ -29,9 +21,13 @@ html
 	
 	h1
 		margin-bottom: 0
+		font-weight: 800
+		line-height: 1.4
 
 	p 
+		+responsive-text-size(medium)
 		margin-top: sizes(base)
+		font-weight: 600
 
 	.buttons
 		.button:not(:last-child)
